syntax = "proto3";

service AirConditioner {
    rpc change_temperature (ChangeAirConditionerTemperatureRequest) returns (AirConditionerResponse) {}
    rpc get_temperature (AirConditionerEmptyRequest) returns (AirConditionerResponse) {}
    rpc change_state (ChangeAirConditionerStateRequest) returns (AirConditionerResponse) {}
    rpc get_state (AirConditionerEmptyRequest) returns (AirConditionerResponse) {}
    rpc change_sensor_state (ChangeTemperatureSensorState) returns (AirConditionerResponse) {}
}

message AirConditionerEmptyRequest { }

message ChangeTemperatureSensorState {
    optional bool state = 1;
}

message ChangeAirConditionerTemperatureRequest {
    optional string temperature = 1;
}

message ChangeAirConditionerStateRequest {
    optional bool state = 1;
}

message AirConditionerResponse {
    optional bool status = 1;
    optional string message = 2;
}